language.bnf

<number>     ::= 0 | 1 | 2 | 3 | ... | 9
<addop>      ::= + | -
<mulop>      ::= * | /
<letter>     ::= a | b | c | ... | z | A | B | C | ... | Z
<variable>   ::= <letter>
<func-call>  ::= <letter>()
<ident>      ::= <variable> | <func-call>
<factor>     ::= <number> | (<expression>) | <ident>
<term>       ::= <factor> [ <mulop> <factor> ]*
<expression> ::= <term> [ <addop> <term> ]*
<assignment> ::= <ident> = <expression>
